--- a/1_code/踩坑.md
+++ b/1_code/踩坑.md
@@ -1,9 +1,13 @@
-
 # 踩过的坑
 
 ## Git
 
 github 不配置好ssh 是提交不了的哦！！！
+
+vscode左侧那个竖条里的图标，就下面这个，只能做到git add 和git commit ，git push到远端github 还是要手动来（无语）
+
+![1649919076118.png](image/踩坑/1649919076118.png)
+
 
 - 命令
 
@@ -284,14 +288,6 @@ q			退出
 !			强制
 ```
 
-
-
-
-
-
-
-
-
 ### SSH
 
 查找当前系统是否已经安装
@@ -307,10 +303,6 @@ service sshd start
 ```
 
 配置 https://blog.csdn.net/fish_skyyyy/article/details/119213714
-
-
-
-
 
 ### 软件包
 
