--- a/1_code/踩坑.md
+++ b/1_code/踩坑.md
@@ -1,5 +1,7 @@
 # 踩过的坑
 
+[toc]
+
 ## Git
 
 github 不配置好ssh 是提交不了的哦！！！
@@ -8,8 +10,10 @@ vscode左侧那个竖条里的图标，就下面这个，只能做到git add 和
 
 ![1649919076118.png](image/踩坑/1649919076118.png)
 
+如果push返回443延迟、超时了，不要紧张，真的就八成是连不上github，毕竟有wall~ 2022/4/14今日就到这里吧，学点别的了！
 
-- 命令
+
+- git命令
 
 ```
 
