更新笔记，改回用typora写，vscode 的插件查太多意思了。。

--- a/1_code/踩坑.md
+++ b/1_code/踩坑.md
@@ -12,8 +12,7 @@ vscode左侧那个竖条里的图标，就下面这个，只能做到git add 和
 
 如果push返回443延迟、超时了，不要紧张，真的就八成是连不上github，毕竟有wall~ 2022/4/14今日就到这里吧，学点别的了！
 
-
-- git命令
+- git命令啥的
 
 ```
 
@@ -53,6 +52,16 @@ git commit -m"你的描述"
 
 将代码推到远端分支
 git push origin 你的分支名
+
+git push成功会显示：
+Counting objects: 4, done.
+Delta compression using up to 2 threads.
+Compressing objects: 100% (4/4), done.
+Writing objects: 100% (4/4), 556 bytes | 0 bytes/s, done.
+Total 4 (delta 2), reused 0 (delta 0)
+remote: Resolving deltas: 100% (2/2), completed with 2 local objects.
+To https://github.com/vacrain/learning.git
+   5427cae..17e8925  main -> main
 
 
 
@@ -518,3 +527,10 @@ npm install yarn -g
 启动完，访问主页，显示 invalid host header
 
 https://www.cnblogs.com/chenzilong/p/16065185.html
+
+
+## Vscode
+
+### 大坑！！！VSCODE 终端 取消右键粘贴 快速模式取消
+
+https://blog.csdn.net/akapinkman/article/details/108960835
