测试提交，通过MobaXterm提交

--- a/1_code/坑.md
+++ b/1_code/坑.md
@@ -4,6 +4,8 @@
 
 ## Git
 
+### 注意
+
 github 不配置好ssh 是提交不了的哦！！！
 
 vscode左侧那个竖条里的图标，就下面这个，只能做到git add 和git commit ，git push到远端github 还是要手动来（无语）
@@ -12,7 +14,7 @@ vscode左侧那个竖条里的图标，就下面这个，只能做到git add 和
 
 如果push返回443延迟、超时了，不要紧张，真的就八成是连不上github，毕竟有wall~ 2022/4/14今日就到这里吧，学点别的了！
 
-- git命令啥的
+### git命令啥的
 
 ```
 
@@ -68,6 +70,16 @@ To https://github.com/vacrain/learning.git
 ```
 
 ![](https://exp-picture.cdn.bcebos.com/988e1c532f632385f5d24627cce833e038725d7e.jpg?x-bce-process=image%2Fresize%2Cm_lfit%2Cw_500%2Climit_1%2Fquality%2Cq_80)
+
+### git每日执行命令
+
+```
+git add .
+git commit -m"你的描述"
+git push
+```
+
+
 
 ## Linux
 
