--- a/WILL-2022-04.md
+++ b/WILL-2022-04.md
@@ -12,6 +12,111 @@
 
 
 
+
+
+
+
+
+
+
+
+### Mac下输出目录结构
+
+就类似这种
+
+```
+.
+├── App.vue
+├── assets
+│   ├── css
+│   ├── img
+│   └── logo.png
+├── common
+│   ├── const.js
+│   ├── mixin.js
+│   └── utils.js
+├── components
+│   ├── common
+│   └── content
+├── main.js
+├── network
+├── router
+├── store
+└── views
+    ├── category
+    └── home
+
+```
+
+[推荐先关闭brew自动更新](#  Mac 关闭brew自动更新) 
+
+```
+使用brew包管理工具安装tree，有点慢还可能失败多试试吧
+> brew install tree
+
+安好了吗，我安了好有四五遍，然后看一下都有啥功能
+> tree --help
+
+（不建议）直接tree。。万一目录太深...
+```
+
+使用tree会弹窗，同意就好了：
+
+![image-20220422205842790](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-22_20-58-43_image-20220422205842790.png)
+
+常用技巧
+
+我们可以在目录遍历时使用 -L 参数指定遍历层级
+
+    tree -L 2
+
+如果你想把一个目录的结构树导出到文件 Readme.md ,可以这样操作
+
+    tree -L 2 >README.md //然后我们看下当前目录下的 README.md 文件
+
+只显示文件夹；
+
+    tree -d 
+
+显示项目的层级，n表示层级数。例：显示项目三层结构，tree -l 3；
+
+    tree -L n 
+
+
+
+参考：https://blog.csdn.net/weixin_46351593/article/details/113780899
+
+
+
+
+
+### Mac 关闭brew自动更新
+
+```
+打开~目录
+> cd
+
+打开bash或者zsh配置文件，我的是zsh所以如下，如果是bash把zsh换成bash就行
+> open .zshrc
+
+把下面两行加进去，保存关闭文件
+# 取消 brew 自动更新
+export HOMEBREW_NO_AUTO_UPDATE=true
+
+使配置起效
+> zsh
+
+这就ok咯~
+```
+
+
+
+### TS 使用好习惯
+
+写函数的参数时候，必须带上类型
+
+
+
 ### tar.gz与zip的区别
 
 我们下载文件的时候一般有时候会让我们选择 tar.gz还是.zip，你是不是一样也迟疑选择下载那个？
@@ -304,6 +409,16 @@ echo "如果是will和steppp项目再git push gitee即可"
 
 
 ## funs
+
+
+
+### kfc奇遇记
+
+又看到奇怪的人，一个大妈疯狂打扫别人吃过的东西，是真的吃的和包装都收入囊中
+
+然后还会很好的收拾。。不过，这多少是...了点
+
+
 
 
 
