will (_): 大晚上日常提交

--- a/2_Classified/2_typora/2_使用技巧.md
+++ b/2_Classified/2_typora/2_使用技巧.md
@@ -163,7 +163,7 @@ img {
 
 
 
-### 拖入
+### 快捷链接，拖入文件、目录
 
 **拖入文件夹**
 会直接在新窗口中打开文件夹，在左侧文件列表中，就可以直接看到该文件夹中的文件了
@@ -176,7 +176,7 @@ img {
 ### 左侧文件列表
 
 1. 可以直接拖拽文件及文件夹进行调整其位置
-2. 右键有很多实用的选项，每个都建议试试，除了【文章列表】，其他多多少少都能用上~
+2. 右键，有很多实用的选项，每个都建议试试，除了【文章列表】，其他多多少少都能用上~
 
 ![image-20210927132351525](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2021-09-27 13-23-55_image-20210927132351525.png)
 
