--- a/WILL-2022-04.md
+++ b/WILL-2022-04.md
@@ -26,29 +26,260 @@
 
 
 
+### yum 安装软件 404
 
+总结为来自阿里的背刺，居然给镜像取消了。。先覆盖内容，然后重新配置就好了，就两步
 
-### 开发开发工具
+1. 根据自己的系统百度，我是7所以 查：centos 7 CentOS-Base.repo
+2. 然后找内容挨个试，先复制粘贴，覆盖CentOS-Base.repo里面的文字
+3. 挨个运行下面的命令：想知道啥意思自己百度
 
-开发流程管理工具
-
-> 基础工具：坚果云（同步） + typora（编辑） + gitee（图床）
->
-> 文档模板：参考工作记录
-
-1. 注册票（就是开了个任务，就好像一个群聊，其实就是一个同步的md文件，里面有需求）
-2. 指定分配（其实就是发了一条信息，现在这活，谁主要负责）
-3. 票细节填写（多细都行，不过别整太多代码，关键代码就行、就ok）
-   1. 开发随记，比如临时粘贴关键代码、关键逻辑
-   2. 提交代码
-      1. 测试成功
-      2. 测试失败
-         1. 再开发...
-4. 每周日晚上归档（完事了，就不要在大家眼前晃悠了！）
+```
+yum clean all
+rm -rf  /var/cache/yum/
+yum makecache
+```
 
 
 
-先开一个票，整理目录，整理成
+
+
+下面是我的操作：
+
+1. 覆盖配置文件内容：于是用中科大的镜像，下面内容覆盖/etc/yum.repos.d/CentOS-Base.repo
+
+```
+
+[base]
+name=CentOS-$releasever - Base
+#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=os
+baseurl=http://mirrors.neusoft.edu.cn/centos/7/os/$basearch/
+gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+#released updates 
+[updates]
+name=CentOS-$releasever - Updates
+#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=updates
+baseurl=http://mirrors.neusoft.edu.cn/centos/7/updates/$basearch/
+gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+#additional packages that may be useful
+[extras]
+name=CentOS-$releasever - Extras
+#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=extras
+baseurl=http://mirrors.neusoft.edu.cn/centos/7/extras/$basearch/
+gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+#additional packages that extend functionality of existing packages
+[centosplus]
+name=CentOS-$releasever - Plus
+#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=centosplus
+baseurl=http://mirrors.neusoft.edu.cn/centos/7/centosplus/$basearch/
+gpgcheck=1
+enabled=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+#contrib - packages by Centos Users
+[contrib]
+name=CentOS-$releasever - Contrib
+#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=contrib
+baseurl=http://mirrors.neusoft.edu.cn/centos/7/contrib/$basearch/
+gpgcheck=1
+enabled=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+```
+
+原先内容：
+
+```
+# CentOS-Base.repo
+#
+# The mirror system uses the connecting IP address of the client and the
+# update status of each mirror to pick mirrors that are updated to and
+# geographically close to the client.  You should use this for CentOS updates
+# unless you are manually picking other mirrors.
+#
+# If the mirrorlist= does not work for you, as a fall back you can try the 
+# remarked out baseurl= line instead.
+#
+#
+ 
+[base]
+name=CentOS-$releasever - Base - mirrors.aliyun.com
+#failovermethod=priority
+baseurl=https://mirrors.aliyun.com/centos/$releasever/BaseOS/$basearch/os/
+        http://mirrors.aliyuncs.com/centos/$releasever/BaseOS/$basearch/os/
+        http://mirrors.cloud.aliyuncs.com/centos/$releasever/BaseOS/$basearch/os/
+gpgcheck=1
+gpgkey=https://mirrors.aliyun.com/centos/RPM-GPG-KEY-CentOS-Official
+ 
+#additional packages that may be useful
+[extras]
+name=CentOS-$releasever - Extras - mirrors.aliyun.com
+#failovermethod=priority
+baseurl=https://mirrors.aliyun.com/centos/$releasever/extras/$basearch/os/
+        http://mirrors.aliyuncs.com/centos/$releasever/extras/$basearch/os/
+        http://mirrors.cloud.aliyuncs.com/centos/$releasever/extras/$basearch/os/
+gpgcheck=1
+gpgkey=https://mirrors.aliyun.com/centos/RPM-GPG-KEY-CentOS-Official
+ 
+#additional packages that extend functionality of existing packages
+[centosplus]
+name=CentOS-$releasever - Plus - mirrors.aliyun.com
+#failovermethod=priority
+baseurl=https://mirrors.aliyun.com/centos/$releasever/centosplus/$basearch/os/
+        http://mirrors.aliyuncs.com/centos/$releasever/centosplus/$basearch/os/
+        http://mirrors.cloud.aliyuncs.com/centos/$releasever/centosplus/$basearch/os/
+gpgcheck=1
+enabled=0
+gpgkey=https://mirrors.aliyun.com/centos/RPM-GPG-KEY-CentOS-Official
+ 
+[PowerTools]
+name=CentOS-$releasever - PowerTools - mirrors.aliyun.com
+#failovermethod=priority
+baseurl=https://mirrors.aliyun.com/centos/$releasever/PowerTools/$basearch/os/
+        http://mirrors.aliyuncs.com/centos/$releasever/PowerTools/$basearch/os/
+        http://mirrors.cloud.aliyuncs.com/centos/$releasever/PowerTools/$basearch/os/
+gpgcheck=1
+enabled=0
+gpgkey=https://mirrors.aliyun.com/centos/RPM-GPG-KEY-CentOS-Official
+
+
+[AppStream]
+name=CentOS-$releasever - AppStream - mirrors.aliyun.com
+#failovermethod=priority
+baseurl=https://mirrors.aliyun.com/centos/$releasever/AppStream/$basearch/os/
+        http://mirrors.aliyuncs.com/centos/$releasever/AppStream/$basearch/os/
+        http://mirrors.cloud.aliyuncs.com/centos/$releasever/AppStream/$basearch/os/
+gpgcheck=1
+gpgkey=https://mirrors.aliyun.com/centos/RPM-GPG-KEY-CentOS-Official
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### Linux安装maven
+
+官网下载maven：https://maven.apache.org/download.cgi
+
+哪个新下哪个，工具嘛：[apache-maven-3.8.5-bin.tar.gz](https://dlcdn.apache.org/maven/maven-3/3.8.5/binaries/apache-maven-3.8.5-bin.tar.gz)
+
+下载完，扔到服务器上
+
+```
+解压
+tar -zxf 你上传的压缩包
+
+移动
+mv 你解压出来的文件夹 /usr/local/maven
+
+配置，在/etc/profile文件最后写：
+# maven
+export MAVEN_HOME=/usr/local/maven
+export PATH=$PATH:$MAVEN_HOME/bin
+
+
+使配置生效：
+source /etc/profile
+
+查看版本：
+mvn -v
+
+```
+
+
+
+
+
+
+
+### Linux 上安装jdk java
+
+查看Linux内核版本
+
+```
+arch
+```
+
+根据内核版本下载：
+
+https://www.oracle.com/java/technologies/downloads/#java17
+
+下好了传到Linux上
+
+```
+解压
+tar -zxvf 你上传的压缩包名
+
+移动到系统配置文件夹里
+mv 你解压出来的目录 /usr/local/java
+
+配置，在/etc/profile文件中最后写：
+# java
+export JAVA_HOME=/usr/local/java
+export PATH=$PATH:$JAVA_HOME/bin
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export JRE_HOME=$JAVA_HOME/jre
+
+使配置生效：
+source /etc/profile
+
+查看java版本：
+java -version
+
+看见下面的就是好了~
+java version "17.0.3" 2022-04-19 LTS
+Java(TM) SE Runtime Environment (build 17.0.3+8-LTS-111)
+Java HotSpot(TM) 64-Bit Server VM (build 17.0.3+8-LTS-111, mixed mode, sharing)
+
+```
+
+
+
+出问题了。。不能用java17。。所以还是下个11吧
+
+```
+下载
+wget https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz
+
+解压
+tar -xzvf jdk-11.0.14_linux-x64_bin.tar.gz
+
+编辑文件，并添加下面那4行
+vim /etc/profile
+
+export JAVA_HOME=/usr/local/java
+export PATH=$PATH:$JAVA_HOME/bin
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export JRE_HOME=$JAVA_HOME/jre
+
+刷新配置
+source /etc/profile
+
+查看java版本：
+java -version
+```
+
+
+
+
+
+参考：https://www.cnblogs.com/zhoujianyi/p/14753325.html
 
 
 
@@ -479,6 +710,39 @@ echo "如果是will和steppp项目再git push gitee即可"
 
 
 
+### 有关文件夹分类
+
+有各种分类方式，有的按照学习、生活、工作分，有的按照项目分、有的按照时间分
+
+我现在认为，最好的分类还是一级用时间、二级用项目，然后适当的在项目中插入标签（学习、生活、工作啥的）
+
+类似这样的一个目录：(或者也可以将now里面的项目放到顶级目录中，不放在now里)
+
+1. **现在 - now**
+   1. 项目1
+      1. 文档1
+   2. 项目2
+      1. 文档1
+   3. ...
+2. **临时 - temp**
+   1. xxx
+   2. yyy
+   3. ...
+3. **归档 - Archive**
+   1. 2022-04
+      1. 项目a
+      2. 项目b
+      3. ...
+   2. 2022-03
+      1. 项目c
+      2. 项目d
+      3. ...
+   3. ...
+
+
+
+
+
 
 
 ### kfc奇遇记
@@ -495,13 +759,13 @@ echo "如果是will和steppp项目再git push gitee即可"
 
 https://www.uisdc.com/ant-design-ui-attack
 
+**Ant Design慎用**。。。还挺搞笑的，可以了解一下：[antd组件的圣诞节彩蛋事件](https://www.jianshu.com/p/24e39e97ae8f)
+
 
 
 ### 随机图片
 
 https://picsum.photos/1920/1080?random
-
-**Ant Design慎用**。。。还挺搞笑的，可以了解一下：[antd组件的圣诞节彩蛋事件](https://www.jianshu.com/p/24e39e97ae8f)
 
 
 
