will (_): 出去吃饭咯，哈哈哈，鸡汤来咯~

--- a/04.md
+++ b/04.md
@@ -20,7 +20,15 @@
 
 
 
+### mac  查看最近打开的文件夹 智能文件夹
 
+如图，右键，选择
+
+![image-20220426053552032](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-26_05-35-52_image-20220426053552032.png)
+
+照着选就行，保存到哪都行，之后左侧 侧边栏就有了，随时用随时点~
+
+![image-20220426054051279](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-26_05-40-51_image-20220426054051279.png)
 
 
 
