will (_): 趴在床上打代码

--- a/04.md
+++ b/04.md
@@ -16,7 +16,21 @@
 
 
 
+### 终端快捷 用vscode 打开当前目录 
 
+Win 可以直接：
+
+```
+code .
+```
+
+mac需要配置一下
+
+1. F1
+2. 输入shell
+3. 选在command里加code命令那个
+4. 确认
+5. mac也能愉快的在终端打开vscode了~
 
 
 
