--- a/04.md
+++ b/04.md
@@ -12,7 +12,110 @@
 
 
 
+### 本地项目绑定到远程仓库
 
+1. 新建文件夹
+2. 终端打开到这个文件夹里
+3. git init
+4. git remote add origin 仓库连接【https、ssl、都行】
+5. 
+
+
+
+### git push到指定分支
+
+首先要下载指定分支：
+
+```
+git clone -b 【分支名】 【仓库连接】
+```
+
+修改过后，还是那三连：
+
+```
+git status
+git add .
+git commit -m"测试提交"
+```
+
+然后push到指定分支
+
+```
+git push 
+```
+
+
+
+
+
+
+
+
+
+### 为什么要出门学习
+
+![image-20220427114841269](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-27_11-48-41_image-20220427114841269.png)
+
+### mac 满电 却显示没电了
+
+这就是惯的，打两下就好了（bushi
+
+
+
+看网上有这样的
+
+第一步：重启后按D键检查计算机硬件情况（该步骤需连接电源线），没有问题进入第二步；
+
+第二步：关机，按Shift+Control+Option+关机键，持续15秒，属于放电过程，电脑屏幕不会有任何显示；
+
+第三步：，电脑处于关机状态，点击开机键后，迅速按住Option+Command+R+P，持续25秒后，等待电脑开机即可。
+
+
+
+总结就是，冷加老化
+
+方法：温暖它 or 换新的
+
+### vscode 自定义快捷提示输入
+
+比如在vue里想vueinit就生成基本的setup语法糖和template模板
+
+首先打开这个：
+
+![image-20220427042525721](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-27_04-25-25_image-20220427042525721.png)
+
+
+
+然后选：New Global那个
+
+下面代码粘到大括号里：（然后保存重启vscode即可！）
+
+```
+
+    "vueinit": {
+        "scope": "vue",
+        "prefix": "vueinit",
+        "body": [
+            "<script setup lang=\"ts\">",
+
+            "</script>",
+            "<template>",
+
+            "</template>"
+        ],
+        "description": "vue3 setup template"
+    }
+```
+
+
+
+
+
+### 非常舒服的vscode npm项目视图
+
+改装及使用步骤：（这么改因为，正常启动在左边，停止在右边，隔的很远，太难受了）
+
+![image-20220427035435615](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-27_03-54-35_image-20220427035435615.png) 
 
 
 
