--- a/04.md
+++ b/04.md
@@ -12,7 +12,7 @@
 
 
 
-### 本地项目绑定到远程仓库
+### Git本地项目绑定到远程仓库
 
 1. 新建文件夹
 2. 终端打开到这个文件夹里
@@ -833,7 +833,15 @@ echo "如果是will和steppp项目再git push gitee即可"
 
 
 
+### 要看的、收藏的网站太多了 怎么办
 
+火狐浏览器可以一键打开一个收藏夹里的所有网页，平时没看完的、或者想看的 都直接收藏进去
+
+我的那个文件夹起名就叫temp就是临时的意思
+
+之后，如果攒的很多了，需要滚动了（大概有几十个了吧），那就一键打开全部，再清空这个文件夹
+
+然后挨个看就好了，还是很喜欢的文章就再收藏进来（相信我这种概率，经过时间的洗涤，会很低的，大概只有1/10的网站值得你删掉再收藏） 
 
 ### 有关文件夹分类
 
