will (_): 做饭前提交一哈~~

--- a/04.md
+++ b/04.md
@@ -10,6 +10,14 @@
 
 
 
+### 开源协议
+
+参考：https://zhuanlan.zhihu.com/p/51331026
+
+
+
+![img](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-30_05-08-56_v2-6f7178c4e502fc939e371717cd887b6c_1440w.jpg)
+
 
 
 ### Git本地项目绑定到远程仓库
@@ -51,30 +59,6 @@ git push
 
 
 
-
-### 为什么要出门学习
-
-![image-20220427114841269](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-27_11-48-41_image-20220427114841269.png)
-
-### mac 满电 却显示没电了
-
-这就是惯的，打两下就好了（bushi
-
-
-
-看网上有这样的
-
-第一步：重启后按D键检查计算机硬件情况（该步骤需连接电源线），没有问题进入第二步；
-
-第二步：关机，按Shift+Control+Option+关机键，持续15秒，属于放电过程，电脑屏幕不会有任何显示；
-
-第三步：，电脑处于关机状态，点击开机键后，迅速按住Option+Command+R+P，持续25秒后，等待电脑开机即可。
-
-
-
-总结就是，冷加老化
-
-方法：温暖它 or 换新的
 
 ### vscode 自定义快捷提示输入
 
@@ -832,6 +816,30 @@ echo "如果是will和steppp项目再git push gitee即可"
 ## funs
 
 
+
+### 为什么要出门学习
+
+![image-20220427114841269](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-27_11-48-41_image-20220427114841269.png)
+
+### mac 满电 却显示没电了
+
+这就是惯的，打两下就好了（bushi
+
+
+
+看网上有这样的
+
+第一步：重启后按D键检查计算机硬件情况（该步骤需连接电源线），没有问题进入第二步；
+
+第二步：关机，按Shift+Control+Option+关机键，持续15秒，属于放电过程，电脑屏幕不会有任何显示；
+
+第三步：，电脑处于关机状态，点击开机键后，迅速按住Option+Command+R+P，持续25秒后，等待电脑开机即可。
+
+
+
+总结就是，冷加老化
+
+方法：温暖它 or 换新的
 
 ### 要看的、收藏的网站太多了 怎么办
 
