--- a/2_Classified/2_typora/0_使用技巧.md
+++ b/2_Classified/2_typora/0_使用技巧.md
@@ -17,17 +17,17 @@
 
 下面是与**文档结构的调整**相关的快捷键
 
-| 说明                                          | 快捷键(按顺序输入哈!)                                                                                            |
-| ------------------------------------------- | ------------------------------------------------------------------------------------------------------- |
-| 将内容变为**标题**<br />重复按快捷键，可在**正文**和**标题**之间切换 | Ctrl + `1`~`6` [^前1]<br />或 右键 > 段落 > 选择标题级别                                                            |
-| 将内容变为**正文**                                 | Ctrl + `0` [^前1]                                                                                        |
-| 将内容放入**引用**（区块）                             | Ctrl + Shift + Q [^前1] <br />或 `>` + 空格 [^前2]                                                           |
-| 将内容放入**无序列表**                               | `-` + 空格 [^前2]                                                                                          |
-| 将内容放入**有序列表**                               | 数字 + `.` + 空格 [^前2]                                                                                     |
-| 将内容放入**任务列表**                               | 未被勾选：<br /> `-` + 空格 + `[ `+ 空格 +` ]` + 空格 [^前2]<br />被勾选：<br />  `-` + 空格 + `[ `+ `x` +` ]` + 空格 [^前2] |
-| 加、减标题级别                                     | Ctrl + `-`<br /> Ctrl + `=` [^前1]                                                                       |
-| 分割线                                         | `---` + 回车 [^前2]                                                                                        |
-|                                             |                                                                                                         |
+| 说明                                                         | 快捷键(按顺序输入哈! 按照注释的操作)                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 将内容变为**标题**<br />重复按快捷键，可在**正文**和**标题**之间切换 | Ctrl + `1`~`6` [^前1]<br />或 右键 > 段落 > 选择标题级别     |
+| 将内容变为**正文**                                           | Ctrl + `0` [^前1]                                            |
+| 将内容放入**引用**（区块）                                   | Ctrl + Shift + Q [^前1] <br />或 `>` + 空格 [^前2]           |
+| 将内容放入**无序列表**                                       | `-` + 空格 [^前2]                                            |
+| 将内容放入**有序列表**                                       | 数字 + `.` + 空格 [^前2]                                     |
+| 将内容放入**任务列表**                                       | 未被勾选：<br /> `-` + 空格 + `[ `+ 空格 +` ]` + 空格 [^前2]<br />被勾选：<br />  `-` + 空格 + `[ `+ `x` +` ]` + 空格 [^前2] |
+| 加、减标题级别                                               | Ctrl + `-`<br /> Ctrl + `=` [^前1]                           |
+| 分割线                                                       | `---` + 回车 [^前2]                                          |
+|                                                              |                                                              |
 
 ### 文本样式
 
@@ -100,6 +100,14 @@
 [^前4]:选中要调整的内容 或 单击要插入内容的位置
 
 ## 使用技巧
+
+### 微调样式（假设你会css）
+
+偏好设置 - 通用设置 - 高级 - 允许debug （也可能叫开发者模式）
+
+然后定位到想修改的dom标签，复制class内容，到对应的主题css文件（在偏好设置 - 外观（最下面）- 打开文件夹，然后就能看见各种主题的css文件）
+
+之后修改对应的class即可，推荐微调，不要直接修改全局变量，除非你知道都有什么地方使用了全局变量
 
 ### 放大字体 并不显示到目录
 
