will (_): 发现不错的typora插件

--- a/2022-05.md
+++ b/2022-05.md
@@ -8,7 +8,11 @@
 
 
 
+### 魔改typora的大纲
 
+https://github.com/XiLaiTL/typora-theme-bothview-tabbar
+
+![header](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-06_19-43-56_bothview-tabbar.jpg)
 
 ### Angular提交规范、commitlint、git-cz辅助提交工具
 
