will (_): 五一后开工第一天

--- a/2022-05.md
+++ b/2022-05.md
@@ -8,7 +8,69 @@
 
 
 
+### vueuse/core
+
+一个工具包吧算是：https://www.npmjs.com/package/@vueuse/core
+
+```
+pnpm i @vueuse/core
+```
+
+安装完使用，比如复制功能：
+
+```
+// 某某vue文件里
+
+// template里
+<input v-model:value="source" placeholder="请输入要复制的内容吧" />
+
+// js部分
+import { useClipboard } from '@vueuse/core';
+const { copy, isSupported } = useClipboard();
+
+function handleCopy() {
+  if (!isSupported) {
+    window.$message?.error('您的浏览器不支持Clipboard API');
+    return;
+  }
+  if (!source.value) {
+    window.$message?.error('请输入要复制的内容');
+    return;
+  }
+  copy(source.value);
+  window.$message?.success(`复制成功：${source.value}`);
+}
+```
+
+其他玩法：
+
+https://blog.csdn.net/xgangzai/article/details/122677773
+
+
+
+### 备案号放置
+
+备案成功后会收到短信提示：
+
+**根据工信部要求：已通过备案的用户，在网站开通时应在网站首页底部放置正确的备案号，并链接到工信部网址：beian.miit.gov.cn，供公众查询核对。**
+
+
+
+就是在底部放个链接即可，类似这样的：
+
+```
+<a href="https://beian.miit.gov.cn/" target="_blank">蜀ICP备XXXXX号-X</a>
+```
+
+
+
 ### 魔改typora的大纲
+
+还不太行，而且这个是把大纲整右边去了
+
+
+
+参考：
 
 https://github.com/XiLaiTL/typora-theme-bothview-tabbar
 
