will (_): Linux 安装mysql全过程 ~

--- a/1_Mothly-Archive/2022/2022-04.md
+++ b/1_Mothly-Archive/2022/2022-04.md
@@ -465,7 +465,7 @@ pnpm config set electron_mirror https://npm.taobao.org/mirrors/electron/
 
 使用tree会弹窗，同意就好了：
 
-![image-20220422205842790](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-22_20-58-43_image-20220422205842790.png)
+<img src="https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-04-22_20-58-43_image-20220422205842790.png" alt="image-20220422205842790" style="zoom:50%;" />
 
 常用技巧
 
