--- a/2022-05.md
+++ b/2022-05.md
@@ -8,6 +8,609 @@
 
 
 
+
+
+
+
+
+
+### 腾讯云开放3306端口 不必关防火墙啥的
+
+点进云服务器，点防火墙
+
+添加规则，选3306mysql ，确定完成即可！
+
+
+
+### 后端开发简单总结
+
+
+
+一个后端开发需要哪些东西：
+
+1. logger
+2. http
+3. mysql （有了http自然有这个能力）
+4. debug
+5. 
+
+
+
+### vscode debug npm项目
+
+
+
+在要debug的代码行号左边点一下小圆点：![image-20220508171927050](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-19-27_image-20220508171927050.png)
+
+
+
+然后debug启动方式：
+
+![image-20220508171841538](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-18-41_image-20220508171841538.png)
+
+
+
+乐哈哈了就
+
+![image-20220508172121622](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-21-21_image-20220508172121622.png)
+
+
+
+### Mac ssh ftp 远程连接Linux神器 electerm
+
+win上有一个叫m啥的，很好用，可惜没有mac版
+
+不过mac上也有好用的开源软件electerm，省去下载过程，github自己找一下
+
+下面是新建连接过程：（**鼠标放在 + 上即可！不用点**）
+
+![image-20220508170703006](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-07-03_image-20220508170703006.png)
+
+依次填写ip、user、password，然后test一下，ok了，还是上面那个图，鼠标**放在** + 上即可，就能看见啦，可以随意切换ssh和sftp
+
+![image-20220508171038231](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-10-38_image-20220508171038231.png)
+
+
+
+
+
+
+
+### vscode 新项目 直接 git push到新仓库repo
+
+初始化：
+
+```
+git init
+touch .gitignore
+```
+
+```
+.gitignore文件里写入：
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+stats.html
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+```
+
+
+
+提交到本地
+
+```
+git add .
+git commit -m "xxxx初体验~"
+```
+
+
+
+提交到github新仓库：
+
+1. vscode可以登录github，登录上，在左下角那个小人那
+2. 确认一下安装了 gitlens 插件，就第一个，现在有 1400多万下载了
+3. 确认已经commit完了，打开侧边栏![image-20220508170403040](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_17-04-03_image-20220508170403040.png)
+4. 然后点蓝色图标（其实就是push）
+5. 选一下提交到私有还是public 就完事了
+
+
+
+### Linux 7.6 安装mysql8
+
+**步骤实在太多，不想写了（还是写了，太不容易了，看似只是安装个mysql，把Linux命令全复习了一遍），没有Linux基础不能搞啊！！！**
+
+有基础的直接参考：[Linux7.6二进制安装Mysql8.0.27_IT邦德的博客-CSDN博客](https://blog.csdn.net/weixin_41645135/article/details/121526797?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522165200295016781683955682%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fblog.%2522%257D&request_id=165200295016781683955682&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_ecpm_v1~rank_v31_ecpm-3-121526797-null-null.nonecase&utm_term=linux&spm=1018.2226.3001.4450)
+
+**注意！！** 版本可能不太一样，不能直接复制这位老哥的命令哈！比如我现在的mysql版本就是8.0.29 那位老哥是27
+
+开搞开搞！
+
+#### 确认一下环境
+
+```
+> cat /etc/redhat-release
+CentOS Linux release 7.6.1810 (Core) 
+
+> df -TH
+Filesystem     Type      Size  Used Avail Use% Mounted on
+devtmpfs       devtmpfs  952M     0  952M   0% /dev
+tmpfs          tmpfs     964M   50k  964M   1% /dev/shm
+tmpfs          tmpfs     964M  586k  963M   1% /run
+tmpfs          tmpfs     964M     0  964M   0% /sys/fs/cgroup
+/dev/vda1      ext4       43G   13G   29G  30% /
+tmpfs          tmpfs     193M     0  193M   0% /run/user/0
+
+> cat /etc/hosts
+127.0.0.1 VM-16-5-centos VM-16-5-centos
+127.0.0.1 localhost.localdomain localhost
+127.0.0.1 localhost4.localdomain4 localhost4
+::1 VM-16-5-centos VM-16-5-centos
+::1 localhost.localdomain localhost
+::1 localhost6.localdomain6 localhost6
+
+> hostname
+VM-16-5-centos
+
+卸载MariaDB
+查看：
+> rpm -qa |grep mariadb
+这个命令会出现软件包全名（可能版本和你的不一样）：mariadb-libs-5.5.60-1.el7_5.x86_64
+然后卸载：
+> rpm -e --nodeps mariadb-libs-5.5.60-1.el7_5.x86_64
+
+yum准备好咯
+能来安mysql这玩意应该都没问题吧。。配置源就略过了哈
+
+```
+
+#### 创建目录、用户组
+
+```
+注：可以部署多个实例，通过端口区分root 用户操作
+
+创建目录
+mkdir -p /mysql/data/mysql3306
+mkdir -p /mysql/app/
+mkdir -p /mysql/conf/
+mkdir -p /mysql/data/mysql3306/pid/
+mkdir -p /mysql/data/mysql3306/socket/
+mkdir -p /mysql/data/mysql3306/log/
+mkdir -p /mysql/data/mysql3306/binlog/
+mkdir -p /mysql/data/mysql3306/errlog
+mkdir -p /mysql/data/mysql3306/relaylog/
+mkdir -p /mysql/data/mysql3306/slowlog/
+mkdir -p /mysql/data/mysql3306/tmp/
+
+用户组：
+groupadd mysql
+useradd -g mysql mysql
+
+授权、改密码
+chown -R mysql:mysql /mysql
+passwd mysql
+
+查看：
+cat /etc/group | grep mysql
+cat /etc/passwd | grep mysql
+
+切换成mysql用户操作
+su - mysql
+```
+
+#### 下载mysql8
+
+打开官网 https://dev.mysql.com/downloads/mysql/
+
+照着选：
+
+![image-20220508202914306](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_20-29-14_image-20220508202914306.png)
+
+然后下载第一个，**Compressed TAR Archive** 
+
+今天是2022-05-08 ，我下载的是 8.0.29 ，大小 515.1M
+
+
+
+#### 上传并安装
+
+上传操作省略，各种sftp骚操作一下
+
+```
+复制到/mysql/app
+> cp 你上传的那个压缩包.tar.xz /mysql/app
+
+来到mysql软件安装目录
+> cd /mysql/app
+
+md5验证一下，以免有坏蛋加塞病毒
+> md5sum 你复制过来那个压缩包.tar.xz
+验证完：
+13bb219c9ab74b3c8ea8c41c204cbef4  mysql-8.0.29-linux-glibc2.12-x86_64.tar.xz
+
+解压软件包
+> tar xvf 你复制过来那个压缩包.tar.xz
+
+重命名
+> mv 解压完的目录名 mysql8.0.29
+
+查看一下
+> ls
+应该是一个压缩包、一个目录
+把压缩包删了
+> rm 压缩包名.tar.xz
+
+配置环境变量，好些个方法，我比较喜欢vim 或者直接通过远程工具打开文件编辑
+/home/mysql/.bash_profile 文件最后加上：
+MYSQL_HOME=/mysql/app/mysql8.0.27
+PATH=$PATH:$HOME/.local/bin:$HOME/bin:$MYSQL_HOME/bin
+
+刷新配置
+source ~/.bash_profile
+
+查看命令位置
+which mysql
+
+```
+
+#### 填写配置文件
+
+用vim或者小骚工具都行，把下面内容整进 /mysql/conf/my3306.cnf ，第一行必须是[mysqld]
+
+```
+[mysqld]
+server_id = 80273306
+default-storage-engine= InnoDB
+basedir=/mysql/app/mysql8.0.29  # 这个要自己改一下哈！！
+datadir=/mysql/data/mysql3306/data/
+socket=/mysql/data/mysql3306/socket/mysql.sock
+log-error=/mysql/data/mysql3306/log/mysqld.log
+pid-file=/mysql/data/mysql3306/pid/mysqld.pid
+port=3306
+default-time_zone='+8:00'
+default_authentication_plugin=mysql_native_password
+transaction_isolation=READ-COMMITTED
+max_connections=1500
+back_log=500
+wait_timeout=1800
+max_user_connections=800
+innodb_buffer_pool_size=1024M
+innodb_log_file_size=512M
+innodb_log_buffer_size=40M
+slow_query_log=ON
+long_query_time=5
+
+slow_query_log = ON
+slow_query_log_file = /mysql/data/mysql3306/slowlog/slow3306.log
+log_error = /mysql/data/mysql3306/errlog/err3306.log
+log_error_verbosity = 3
+log_bin = /mysql/data/mysql3306/binlog/mysql_bin
+log_bin_index = /mysql/data/mysql3306/binlog/mysql_binlog.index
+general_log_file = /data/mysql/mysql3306/generallog/general.log
+log_queries_not_using_indexes = 1
+log_slow_admin_statements = 1
+expire_logs_days = 90
+binlog_expire_logs_seconds = 2592000
+long_query_time = 2
+min_examined_row_limit = 100
+log_throttle_queries_not_using_indexes = 1000
+innodb_flush_log_at_trx_commit=1
+```
+
+#### 数据库初始化
+
+下面的mysql8.0.29看看和自己版本能对上不，可能需要改改
+
+```
+mysqld --defaults-file=/mysql/conf/my3306.cnf --initialize --user=mysql --basedir=/mysql/app/mysql8.0.29 --datadir=/mysql/data/mysql3306/data/
+```
+
+#### 查看密码
+
+```
+cat /mysql/data/mysql3306/errlog/err3306.log | grep localhost
+
+上面命令执行完，应该就会显示一行，在 root@localhost: 后面 就是密码，我的是：
+l?)<I,SYP2M%
+```
+
+#### 启动
+
+```
+mysqld_safe --defaults-file=/mysql/conf/my3306.cnf --user=mysql &
+```
+
+#### 登录
+
+执行完把初始化得到的奇怪密码粘贴进去即可，**登录完别退出，直接去改密码**
+
+```
+mysql -uroot -p  -P 3306 -S /mysql/data/mysql3306/socket/mysql.sock
+```
+
+#### 改本地登录密码
+
+```
+alter user root@'localhost' identified by '你自己编一个密码';
+
+没事闲的也可以看看mysql状态：
+status
+```
+
+#### 远程登陆设置
+
+```
+使用如下语句创建 root 用户是无法通过 navicat 等客户端登录的，
+由于从 MySQL8 开始，身份验证插件发生改变，
+默认的 “caching_sha2_password” 不允许远程登录，
+故需将此插件修改为 “mysql_native_password” 便可登录。
+
+mysql> create user root@'%' identified with mysql_native_password by '再编一个密码';
+mysql> grant all on *.* to root@'%' with grant option;
+mysql> flush privileges;
+
+查看mysql用户，里面有一个root 后面是% ，这就是可以远程登录的用户
+mysql> select user,host,plugin from mysql.user; 
+
+如果想修改远程登录密码:
+mysql> alter user root@'%' identified by '再再编一个密码';
+```
+
+#### 远程登录
+
+填写ip、user、密码，都是上面设置的
+
+user是root，如果你没写别的话
+
+#### 退出 Bye
+
+```
+quit
+```
+
+![image-20220508201250794](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-08_20-12-50_image-20220508201250794.png)
+
+
+
+
+
+### github 实用 小技巧
+
+1. 高级搜索
+
+进入github，按s会自动聚焦到搜索框，然后直接回车，再选择  [advanced search](https://github.com/search/advanced) 
+
+
+
+2. 查找仓库内文件
+
+打开指定仓库，按t，可以找文件
+
+打开指定文件后，按L，可以跳到指定行数 ，按B，可以查看变动记录
+
+点击行号，还可以复制或生成连接
+
+
+
+3. 在线vscode
+
+打开指定仓库，按下句号即可
+
+
+
+### mysql、mongodb、redis 根据场景选择
+
+一般就都得带上 mysql
+
+日志、评论等疯狂写入大数据量的用芒果
+
+redis 缓存token、今日新闻啥的，给mysql顶一下短期不变的数据
+
+
+
+### vscode快捷打开文件
+
+com + p
+
+or
+
+ctrl + p
+
+然后写文件名即可
+
+### 一般指令 命令行查看 使用方式
+
+下面以npm 指令为例
+
+```
+直接终端运行 npm
+
+然后会有一堆选项 ，比如 install、run等
+最后会有一个help <term> 这个就是可以详细介绍一个选项如何使用
+如：npm help run  可以给出npm run的使用方式
+
+退出方式：写个q就行 quit的意思
+```
+
+
+
+### vscode 智能 js提示  插件TabNine.tabnine-vscode
+
+https://marketplace.visualstudio.com/items?itemName=TabNine.tabnine-vscode
+
+就安完正常打代码会发现提示更加智能了！
+
+有的是在代码下方提示，按上下键选择，回车选择，有的是在代码后面，按tab健可以自动补全
+
+
+
+### js vscode 函数 注释 添加类型
+
+示例：
+
+```
+
+/**
+ * @description:
+ * @param {import('fastify').FastifyInstance} fastify
+ * @param {*} opts
+ * @return {*}
+ */
+export default async function (fastify, opts) {
+    fastify.get("/test1", async (req, reply) => {
+        reply.code(200).send("got test1 route");
+    });
+}
+```
+
+
+
+### vscode 添加代码模板 快捷剪头函数
+
+首选项（preference）> 用户片段（user snipetts） > 新建全局（global）
+
+起名叫 ES6-snipetts 吧，随便起名，自己能认识就ok
+
+清空文件，下面的粘进去，保存就ok了
+
+```
+{
+    "箭头函数": {
+        //代码片段名称
+        "prefix": "ff", //快捷键唤醒代码片段 可以自己设置成别的
+        "body": [
+            //body里面的内容就是代码段内容
+            "($1) => {$2}" // $1和$2为占位符
+        ],
+        "description": "Arrow Function" //代码片段的介绍描述
+    }
+}
+
+```
+
+
+
+测试：随便打开一个文件，按ff就有提示了
+
+
+
+
+
+### npm镜像 源 配置nrm 源管理工具
+
+通过nrm
+
+```
+npm install nrm -g
+
+查看源，比如淘宝的 http://registry.npm.taobao.org  官方的 http://www.npmjs.org
+nrm ls
+
+nrm use xxxxx
+```
+
+
+
+或者知道域名的话，直接配置：
+
+```
+npm install --registry=[源地址]
+```
+
+
+
+或者修改配置文件 .npmrc（mac端的在 ~ 目录，win的找找吧，应该在user里），或者直接在当前项目中创建也是ok的
+
+```
+# .npmrc
+
+# 通用的 
+registry=[源地址]
+
+# 专门的
+electron_mirror=https://npm.taobao.org/mirrors/electron/
+```
+
+
+
+
+
+### Alpha、Beta、RC 版本说明
+
+Alpha、Beta、RC（release candidate）分别是内测、公测 和 发布候选版本
+
+α、β、λ常用来表示软件测试 过程中的三个阶段，α是第一阶段，一般只供内部测试使用；β是第二个阶段，已经消除了软件中大部分的不完善之处，但仍有可能还存在缺陷和漏洞，一般只提供给特定的用户群来测试使用；λ是第三个阶段，此时产品已经相当成熟，只需在个别地方再做进一步的优化处理即可上市发行。 
+
+### chrome debug技巧
+
+重发请求，这有一种简单到发指的方式。
+
+1. 选中`Network`
+2. 点击`Fetch/XHR`
+3. 选择要重新发送的请求
+4. 右键选择`Replay XHR`
+
+
+
+在控制台快速发起请求
+
+还是联调或修BUG的场景，针对同样的请求，有时候需要**修改入参**重新发起，有啥快捷方式？
+
+1. 选中`Network`
+2. 点击`Fetch/XHR`
+3. 选择`Copy as fetch`
+4. 控制台粘贴代码
+5. 修改参数，回车搞定
+
+
+
+调试网页时通过`Elements`面板选中元素后，如果想通过`JS`知道它的一些属性，如`宽`、`高`、`位置`等怎么办呢？
+
+1. 通过`Elements`选择要调试的元素
+2. 控制台直接用`$0`访问
+
+
+
+使用`$_`引用上一次操作的结果，不用每次都复制一遍
+
+```javascript
+// 第1步
+'fatfish'.split('') // ['f', 'a', 't', 'f', 'i', 's', 'h']
+// 第2步
+$_.reverse() // ['h', 's', 'i', 'f', 't', 'a', 'f']
+// 第3步
+$_.join('') // hsiftaf
+```
+
+
+
+
+
 ### vueuse/core
 
 一个工具包吧算是：https://www.npmjs.com/package/@vueuse/core
