--- a/2_Classified/2_typora/0_使用技巧.md
+++ b/2_Classified/2_typora/0_使用技巧.md
@@ -17,7 +17,7 @@
 
 下面是与**文档结构的调整**相关的快捷键
 
-| 说明                                                         | 快捷键(按顺序输入哈! 按照注释的操作)                         |
+| 说明                                                         | 快捷键<br />(按顺序输入哈! 按照注解的提示操作)               |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | 将内容变为**标题**<br />重复按快捷键，可在**正文**和**标题**之间切换 | Ctrl + `1`~`6` [^前1]<br />或 右键 > 段落 > 选择标题级别     |
 | 将内容变为**正文**                                           | Ctrl + `0` [^前1]                                            |
