will (_): 明天要离职了...

--- a/2022-05.md
+++ b/2022-05.md
@@ -12,6 +12,74 @@
 
 
 
+### win 截图 并 显示在一边
+
+https://zh.snipaste.com/
+
+官网下载即可
+
+基本使用：
+
+- F1截屏
+- 点击图钉按钮📌 可以把截图直接显示在所有软件最顶层，可以来回移动~
+- esc 或 鼠标右键 退出
+- 进入截图后，按 , 或 . 可以查看历史截图！
+
+其他：
+
+- 保存到剪贴板 ( ![img](https://www.snipaste.com/img/copy16.svg) / Ctrl + C / Enter / 双击 截屏区域)
+- 保存到文件 ( ![img](https://www.snipaste.com/img/save16.svg) / Ctrl + S)
+- 保存到贴图 ( ![img](https://www.snipaste.com/img/pin16.svg) / Ctrl + T)
+- 快捷保存 (Shift + ![img](https://www.snipaste.com/img/save16.svg)/ Ctrl + Shift + S)
+
+
+
+### eclipse debug说明
+
+https://baijiahao.baidu.com/s?id=1709030904973465262&wfr=spider&for=pc
+
+
+
+### sts eclipse上面 安装过的插件
+
+Quick Search
+
+MyBatis Generator
+
+MyBatipse
+
+JRebel
+
+
+
+
+
+### mac终端去掉last login消息
+
+打开终端，直接输入
+
+```shell
+touch .hushlogin
+```
+
+关闭后重新打开就行~
+
+
+
+### 搞开发还得是win
+
+开发还的是win
+
+数据库、Linux啥的可以装虚拟机玩
+
+mac也就搞搞图、音乐、文档还行吧
+
+
+
+### Nodejs 开发后端的好处
+
+天然支持json！！！
+
 
 
 ### 腾讯云开放3306端口 不必关防火墙啥的
@@ -24,15 +92,20 @@
 
 ### 后端开发简单总结
 
-
-
 一个后端开发需要哪些东西：
 
 1. logger
 2. http
 3. mysql （有了http自然有这个能力）
 4. debug
-5. 
+5. exception
+6. mvc
+7. orm
+8. di
+9. aop
+10. page
+11. 静态语言
+12. 
 
 
 
