will (_): 离职后的第一天，准备面试，哈哈哈

--- a/2022-05.md
+++ b/2022-05.md
@@ -10,9 +10,41 @@
 
 
 
+### 2022/5/13 离职前记录一下自己用的工具
+
+![image-20220513155150415](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2022/2022-05-13_15-52-00_image-20220513155150415.png)
 
 
-### win 截图 并 显示在一边
+
+
+
+### IDEA创建 springboot项目
+
+idea用不起，算了。。用vscode
+
+
+
+### IDEA、Pycharm、Webstorm 激活
+
+https://idea.medeming.com/jihuoma/
+
+日更的很快就失效了。。啧啧
+
+![IDEA专用激活码（含永久激活）](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-12_21-18-07_IDEA%E4%B8%93%E7%94%A8%E6%BF%80%E6%B4%BB%E7%A0%81%EF%BC%88%E5%90%AB%E6%B0%B8%E4%B9%85%E6%BF%80%E6%B4%BB%EF%BC%89.jpg)
+
+![Pycharm专用激活码（含永久激活）](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-12_21-18-27_Pycharm%E4%B8%93%E7%94%A8%E6%BF%80%E6%B4%BB%E7%A0%81%EF%BC%88%E5%90%AB%E6%B0%B8%E4%B9%85%E6%BF%80%E6%B4%BB%EF%BC%89.jpg)
+
+![Webstorm专用激活码（含永久激活）](https://gitee.com/vacrain/typora_img/raw/master/assets/imgs/2021/2022-05-12_21-18-35_Webstorm%E4%B8%93%E7%94%A8%E6%BF%80%E6%B4%BB%E7%A0%81%EF%BC%88%E5%90%AB%E6%B0%B8%E4%B9%85%E6%BF%80%E6%B4%BB%EF%BC%89.jpg)
+
+
+
+
+
+
+
+
+
+### mac or win 截图 并 贴图 显示在一边
 
 https://zh.snipaste.com/
 
@@ -90,22 +122,24 @@ mac也就搞搞图、音乐、文档还行吧
 
 
 
-### 后端开发简单总结
-
-一个后端开发需要哪些东西：
+### 开发体验影响因素 简单总结
 
 1. logger
-2. http
-3. mysql （有了http自然有这个能力）
-4. debug
-5. exception
-6. mvc
-7. orm
-8. di
-9. aop
-10. page
-11. 静态语言
-12. 
+2. debug
+3. exception
+4. aop
+5. 类型提示，静态语言
+6. 代码提示
+7. 代码格式化
+
+
+
+1. mvc
+2. orm
+3. http
+4. 分页
+5. mysql （有了http自然有这个能力）
+6. 
 
 
 
